--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "next": "^12.1.0",
     "react": "^18.0.0-rc.2",
     "react-dom": "^18.0.0-rc.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
