--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "next": "^12.1.0",
+    "next": "^12.1.5",
     "react": "^18.0.0-rc.2",
     "react-dom": "^18.0.0-rc.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   }
 }
