--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "next": "^12.1.5",
-    "react": "^18.0.0-rc.2",
-    "react-dom": "^18.0.0-rc.2"
+    "@apollo/client": "^3.6.2",
+    "@headlessui/react": "^1.6.1",
+    "graphql": "^16.4.0",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
-    "autoprefixer": "^10.4.5",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.9",
+    "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4"
