--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,21 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .next
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
