--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.2",
-    "@headlessui/react": "^1.6.1",
-    "graphql": "^16.4.0",
-    "next": "^12.1.6",
+    "@apollo/client": "^3.6.9",
+    "@headlessui/react": "^1.6.6",
+    "graphql": "^16.5.0",
+    "next": "^12.2.2",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5",
+    "typescript": "^4.7.4"
   }
 }
