--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@headlessui/react": "^1.6.6",
+    "clsx": "^1.2.1",
     "graphql": "^16.5.0",
     "next": "^12.2.2",
     "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
