--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^12.2.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.5",
