--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@preact/signals-react": "^1.2.1",
+    "@types/canvas-confetti": "^1.4.3",
     "clsx": "^1.2.1",
-    "graphql": "^16.5.0",
-    "next": "^12.2.2",
+    "next": "^12.3.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^18.0.5",
-    "@types/react": "^18.0.15",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4"
+    "@types/node": "^18.11.3",
+    "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.8.4"
   }
 }
